Sat Sep 30 03:00:01 BST 2006  Olly Betts <olly@survex.com>

	* php/Makefile.am: When running smoketest.php, pass the "-q" option,
	  which suppresses HTTP header output for PHP < 4.3 and is ignored for
	  compatibility by more recent versions of PHP.

Sat Sep 30 02:57:24 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac,php/Makefile.am: Build PHP bindings for both PHP4 and
	  PHP5 (using SWIG's new support for generating OO PHP5 wrappers).

Sat Sep 30 02:41:23 BST 2006  Olly Betts <olly@survex.com>

	* python/smoketest.py: Added missing "sys.exit(1)" in
	  TermIter.skip_to() test.  Run exception handling tests and test for
	  OP_ELITE_SET value whatever the python version is.  Add test that
	  MatchDecider can be subclassed successfully.

Fri Sep 29 10:06:37 BST 2006  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo - PHP_tried should be PHP_found.  This might
	  have caused the PHP interpreter not to be found in some cases when
	  it was actually available, but it's only use to run the smoketest
	  not for building the bindings.

Fri Sep 29 07:02:10 BST 2006  Olly Betts <olly@survex.com>

	* tcl8/smoketest.tcl: Add comment about Tcl storing zero bytes as
	  \xc0\x80.

Thu Sep 28 15:05:07 BST 2006  Olly Betts <olly@survex.com>

	* python/extra.i,python/smoketest.py: Wrap TermIterator::skip_to().

Thu Sep 28 12:09:52 BST 2006  Olly Betts <olly@survex.com>

	* csharp/SmokeTest.cs: Fix check that OP_ELITE_SET works to actually
	  work, and also not give compiler warnings.
	* csharp/Makefile.am: Latest swig generates a "xapian_wrap.h" file, so
	  ship that.  Also don't mark xapian_wrap.cc as "nodist" in one place
	  since we want to distribute it (and mark it so elsewhere).

Thu Sep 28 11:54:46 BST 2006  Olly Betts <olly@survex.com>

	* java/SmokeTest.java,python/smoketest.py,ruby/smoketest.rb: Check
	  that OP_ELITE_SET has the correct numerical value.

Thu Sep 28 09:47:01 BST 2006  Olly Betts <olly@survex.com>
